# raceintospace-cvs

./: .cvsignore  .gdbinit  .indent.pro  AUTHORS  Buzz_inc.h  ChangeLog  DEVELOPER  Doxyfile.extended  Doxyfile.quick  Info.plist  Makefile  Makefile.in  PLAN  QUESTIONS  README  TODO  WHO_SPOT  admin.c  aimast.c  aimis.c  aipur.c  alsa.c  asm.c  ast0.c  ast1.c  ast2.c  ast3.c  ast4.c  audio.c  av.h  budget.c  cdmaster.h  cdrom.c  cdrom.h  checkin1  checkin2  checkin3  configure.in  credit.c  crew.c  (+96 more)
RaceIntoSpace.xcodeproj/: project.pbxproj
debian/: changelog  control  rules
m4/: theora.m4
macosx/: .cvsignore  Info.plist  RaceIntoSpace_Prefix.pch
macosx/English.lproj/: InfoPlist.strings
macosx/RaceIntoSpace.xcodeproj/: project.pbxproj
os_linux/: README  raceintospace.xpm
os_macosx/: Info.plist  SDLMain.h  SDLMain.m
os_macosx/English.lproj/: InfoPlist.strings
os_macosx/English.lproj/SDLMain.nib/: classes.nib  info.nib  keyedobjects.nib
os_macosx/MacPorts/games/raceintospace/: Portfile
os_macosx/RaceIntoSpace.xcodeproj/: project.pbxproj
os_win32/: Makefile.os  configure.mingw  installer.nsi.in
utils/: Makefile  mkmovie.c  mknews.c  sync_docs.sh
