AC_INIT(raceintospace.spec)

dnl Specify directory for local macros
AC_CONFIG_MACRO_DIR([m4])

AC_ARG_ENABLE(theora_video,
	AC_HELP_STRING([--enable-theora-video],
		[enable support for theora-encoded video files]),
	[
		theora_video=$enableval
	]
)

AC_PROG_CC
AC_C_INLINE
AC_C_CONST
AC_C_BIGENDIAN(AC_DEFINE([__BIG_ENDIAN__]))

AC_TYPE_SIZE_T
AC_TYPE_SSIZE_T


dnl -------------
dnl Check for SDL
dnl -------------
AC_ARG_WITH(sdl,
						AC_HELP_STRING([--with-sdl],
													 [use SDL (relies on sdl-config)]
					 )
)

AC_PATH_PROG(SDL_CONFIG, sdl-config)

if test "x${with_sdl}" != xno -a "x${SDL_CONFIG}" != x; then
	SDL_CFLAGS=`$SDL_CONFIG --cflags`
	save_CPPFLAGS="$CPPFLAGS"
	CPPFLAGS="$CPPFLAGS $SDL_CFLAGS"

	AC_CHECK_HEADER(SDL.h,
									HAVE_SDL=yes
									SDL_LIBS=`$SDL_CONFIG --libs`,
									HAVE_SDL=no
									)

	CPPFLAGS="$save_CPPFLAGS"
fi
AC_SUBST(SDL_CFLAGS)
AC_SUBST(SDL_LIBS)

dnl -------------
dnl Check for OGG
dnl -------------
AC_CHECK_LIB(ogg,main,
[
	AC_DEFINE([HAVE_LIBOGG])
	AC_SUBST(have_ogg, yes)
	[LIBS]="-logg $LIBS"
	AC_CHECK_LIB(theora,main,
	[
		AC_DEFINE([HAVE_LIBTHEORA])
		AC_SUBST(have_theora, yes)
		[LIBS]="-ltheora $LIBS"
	])
	AC_CHECK_LIB(vorbis,main,
	[
		AC_DEFINE([HAVE_LIBVORBIS])
		AC_SUBST(have_vorbis, yes)
		[LIBS]="-lvorbis $LIBS"
	])
	AC_CHECK_LIB(vorbisfile,main)
])
dnl AC_CHECK_LIB(asound,main)

if test "$have_vorbis" = "yes" -a \
	"$have_vorbis" = "yes" -a \
	"$theora_video" = "yes"
then
	AC_DEFINE([CONFIG_THEORA_VIDEO])
else
	if test "$theora_video" = "yes" ; then
		AC_MSG_WARN([Can't use theora video functionality without ogg, vorbis
					 and theora libraries])
	fi
	theora_video=no
fi
AC_SUBST(theora_video)

AX_CREATE_STDINT_H(int_types.h)

dnl Get the operating system and version number...
uname=`uname`

dnl cross-compile specific configuration
case "$target" in
i?86-mingw32msvc)
	dnl Windows/CygWin configuration
	dnl LIBS="$LIBS `sdl-config --libs`"
	PROG_NAME=raceintospace.exe
	;;
*)
	dnl Everyone else
	PROG_NAME=raceintospace
	dnl LIBS="$LIBS `sdl-config --libs`"
	;;
esac

case "$uname" in
Darwin)
	dnl Darwin/Mac OS X configuration
	AC_DEFINE([CONFIG_MACOSX])
	;;
Linux)
	dnl Linux OS
	;;
CYGWIN*)
	dnl Cygwin
	dnl CYGWIN already defines __CYGWIN__
	;;
*)
	dnl unknown system
	;;
esac

AC_SUBST(PROG_NAME)

AC_CONFIG_HEADER(race.h)
AC_OUTPUT(Makefile, chmod a-w Makefile race.h)
