AC_INIT(Race Into Space,0.3,k6mmc@users.sourceforge.net,raceintospace)

dnl Specify directory for local macros
AC_CONFIG_MACRO_DIR([m4])

AC_ARG_ENABLE(theora_video,
	AC_HELP_STRING([--enable-theora-video],
		[enable support for theora-encoded video files]),
		theora_video=$enableval
)

AC_PROG_CC
AC_C_INLINE
AC_C_CONST
AC_C_BIGENDIAN(AC_DEFINE([__BIG_ENDIAN__]))

AC_TYPE_SIZE_T
AC_TYPE_SSIZE_T

AC_CHECK_LIB(m,main)

dnl ----------------
dnl Check for SDL
dnl ----------------

dnl FIXME: what exact version is enough???
AM_PATH_SDL(1.2.0,:,
	AC_MSG_ERROR([[*** SDL library is required ***]]))

dnl ---------------------------
dnl Check for OGG and friends
dnl ---------------------------

XIPH_PATH_OGG(
	[
		have_ogg=yes
		AC_DEFINE([HAVE_LIBOGG])
	],
	have_ogg=no)
AC_SUBST(have_ogg)

XIPH_PATH_VORBIS(
	[
		have_vorbis=yes
		AC_DEFINE([HAVE_LIBVORBIS])
	],
	have_vorbis=no)
AC_SUBST(have_vorbis)

AC_CHECK_LIB(theora,main,
	[
		AC_DEFINE([HAVE_LIBTHEORA])
		have_theora=yes
		[LIBS]="-ltheora $LIBS"
	],
	have_theora=no)
AC_SUBST(have_theora)

dnl We'll drop that dependency shortly
AC_CHECK_LIB(vorbisfile,main,
	[
		have_vorbisfile=yes
		AC_DEFINE([HAVE_LIBVORBISFILE])
	],
	have_vorbisfile=no)
AC_SUBST(have_vorbisfile)

if test "x$have_vorbis" = xyes -a \
	"x$have_vorbis" = xyes -a \
	"x$have_theora" = xyes -a \
	"x$theora_video" = xyes
then
	AC_DEFINE([CONFIG_THEORA_VIDEO])
else
	if test "x$theora_video" = xyes ; then
		AC_MSG_WARN(
			[[*** theora video unavailable, using old frm files ***]]
		)
	fi
	theora_video=no
fi
AC_SUBST(theora_video)

AX_CREATE_STDINT_H(int_types.h)

dnl Get the operating system and version number...
uname=`uname`

dnl cross-compile specific configuration
case "$host" in
i?86-mingw32msvc)
	dnl Windows/CygWin configuration
	dnl LIBS="`i386-mingw32msvc-sdl-config --libs` $LIBS"
	dnl PROG_NAME=raceintospace.exe
	;;
*)
	dnl Everyone else
	dnl PROG_NAME=raceintospace
	dnl LIBS="`sdl-config --libs` $LIBS"
	;;
esac

case "$uname" in
Darwin)
	dnl Darwin/Mac OS X configuration
	AC_DEFINE([CONFIG_MACOSX])
	;;
Linux)
	dnl Linux OS
	;;
CYGWIN*)
	dnl Cygwin
	dnl CYGWIN already defines __CYGWIN__
	;;
*)
	dnl unknown system
	;;
esac

AC_SUBST(PROG_NAME)

AC_CONFIG_HEADER(race.h)
AC_OUTPUT(Makefile, chmod a-w Makefile race.h)
